Fix spelling mistakes

--- a/neuron.ipynb
+++ b/neuron.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d42fa3a9",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
     "for epoch in range(5):\n",
     "    print(f\"\\nEpoch {epoch + 1}\")\n",
     "\n",
-    "    # Loop throuh each training example\n",
+    "    # Loop through each training example\n",
     "    for i, x in enumerate(X):\n",
     "        print(f\"\\nExample {i + 1} - {'H' if y[i] == 1 else 'n'}\")\n",
     "        print(f\"Input: {x}\")\n",
@@ -173,7 +173,7 @@
     "        error = y[i] - pred\n",
     "        print(f\"Error: {error}\")\n",
     "\n",
-    "        # 4. Update the weights and bias using teh perceptron rule\n",
+    "        # 4. Update the weights and bias using the perceptron rule\n",
     "        weights = [w + lr * error * xi for w, xi in zip(weights, x)]\n",
     "        bias += lr * error\n",
     "\n",
