Add cloud notebook

--- a/oo.ipynb
+++ b/oo.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d42fa3a9",
+   "execution_count": 4,
+   "id": "2e35f132",
    "metadata": {},
    "outputs": [
     {
@@ -11,169 +11,166 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 1\n",
+      "🔁 Epoch 1\n",
       "\n",
-      "Example 1 - H\n",
+      "Example 1 — H\n",
       "Input: [1, 0, 1, 1, 1, 1, 1, 0, 1]\n",
       "Current Weights: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Bias: 0.0\n",
       "Weighted sum (z): 0.00\n",
       "Prediction: 0 | True: 1\n",
       "Error: 1\n",
-      "Updated Weights: [0.2, 0.0, 0.2, 0.2, 0.2, 0.2, 0.2, 0.0, 0.2]\n",
-      "Updated Bias: 0.20\n",
+      "Updated Weights: [0.1, 0.0, 0.1, 0.1, 0.1, 0.1, 0.1, 0.0, 0.1]\n",
+      "Updated Bias: 0.10\n",
       "\n",
-      "Example 2 - n\n",
+      "Example 2 — n\n",
       "Input: [0, 1, 0, 1, 1, 1, 1, 0, 1]\n",
-      "Current Weights: [0.2, 0.0, 0.2, 0.2, 0.2, 0.2, 0.2, 0.0, 0.2]\n",
-      "Bias: 0.2\n",
-      "Weighted sum (z): 1.20\n",
+      "Current Weights: [0.1, 0.0, 0.1, 0.1, 0.1, 0.1, 0.1, 0.0, 0.1]\n",
+      "Bias: 0.1\n",
+      "Weighted sum (z): 0.60\n",
       "Prediction: 1 | True: 0\n",
       "Error: -1\n",
-      "Updated Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Updated Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Updated Bias: 0.00\n",
       "\n",
-      "Epoch 2\n",
+      "🔁 Epoch 2\n",
       "\n",
-      "Example 1 - H\n",
+      "Example 1 — H\n",
       "Input: [1, 0, 1, 1, 1, 1, 1, 0, 1]\n",
-      "Current Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Current Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Bias: 0.0\n",
-      "Weighted sum (z): 0.40\n",
+      "Weighted sum (z): 0.20\n",
       "Prediction: 1 | True: 1\n",
       "Error: 0\n",
-      "Updated Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Updated Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Updated Bias: 0.00\n",
       "\n",
-      "Example 2 - n\n",
+      "Example 2 — n\n",
       "Input: [0, 1, 0, 1, 1, 1, 1, 0, 1]\n",
-      "Current Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Current Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Bias: 0.0\n",
-      "Weighted sum (z): -0.20\n",
+      "Weighted sum (z): -0.10\n",
       "Prediction: 0 | True: 0\n",
       "Error: 0\n",
-      "Updated Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Updated Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Updated Bias: 0.00\n",
       "\n",
-      "Epoch 3\n",
+      "🔁 Epoch 3\n",
       "\n",
-      "Example 1 - H\n",
+      "Example 1 — H\n",
       "Input: [1, 0, 1, 1, 1, 1, 1, 0, 1]\n",
-      "Current Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Current Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Bias: 0.0\n",
-      "Weighted sum (z): 0.40\n",
+      "Weighted sum (z): 0.20\n",
       "Prediction: 1 | True: 1\n",
       "Error: 0\n",
-      "Updated Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Updated Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Updated Bias: 0.00\n",
       "\n",
-      "Example 2 - n\n",
+      "Example 2 — n\n",
       "Input: [0, 1, 0, 1, 1, 1, 1, 0, 1]\n",
-      "Current Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Current Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Bias: 0.0\n",
-      "Weighted sum (z): -0.20\n",
+      "Weighted sum (z): -0.10\n",
       "Prediction: 0 | True: 0\n",
       "Error: 0\n",
-      "Updated Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Updated Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Updated Bias: 0.00\n",
       "\n",
-      "Epoch 4\n",
+      "🔁 Epoch 4\n",
       "\n",
-      "Example 1 - H\n",
+      "Example 1 — H\n",
       "Input: [1, 0, 1, 1, 1, 1, 1, 0, 1]\n",
-      "Current Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Current Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Bias: 0.0\n",
-      "Weighted sum (z): 0.40\n",
+      "Weighted sum (z): 0.20\n",
       "Prediction: 1 | True: 1\n",
       "Error: 0\n",
-      "Updated Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Updated Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Updated Bias: 0.00\n",
       "\n",
-      "Example 2 - n\n",
+      "Example 2 — n\n",
       "Input: [0, 1, 0, 1, 1, 1, 1, 0, 1]\n",
-      "Current Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Current Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Bias: 0.0\n",
-      "Weighted sum (z): -0.20\n",
+      "Weighted sum (z): -0.10\n",
       "Prediction: 0 | True: 0\n",
       "Error: 0\n",
-      "Updated Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Updated Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Updated Bias: 0.00\n",
       "\n",
-      "Epoch 5\n",
+      "🔁 Epoch 5\n",
       "\n",
-      "Example 1 - H\n",
+      "Example 1 — H\n",
       "Input: [1, 0, 1, 1, 1, 1, 1, 0, 1]\n",
-      "Current Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Current Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Bias: 0.0\n",
-      "Weighted sum (z): 0.40\n",
+      "Weighted sum (z): 0.20\n",
       "Prediction: 1 | True: 1\n",
       "Error: 0\n",
-      "Updated Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Updated Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Updated Bias: 0.00\n",
       "\n",
-      "Example 2 - n\n",
+      "Example 2 — n\n",
       "Input: [0, 1, 0, 1, 1, 1, 1, 0, 1]\n",
-      "Current Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Current Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Bias: 0.0\n",
-      "Weighted sum (z): -0.20\n",
+      "Weighted sum (z): -0.10\n",
       "Prediction: 0 | True: 0\n",
       "Error: 0\n",
-      "Updated Weights: [0.2, -0.2, 0.2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "Updated Weights: [0.1, -0.1, 0.1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Updated Bias: 0.00\n"
      ]
     }
    ],
    "source": [
-    "# Training data: 9-pixel image for H and n\n",
+    "# Training data: 9-pixel images representing \"H\" and \"n\"\n",
     "X = [\n",
-    "    [\n",
-    "        1, 0, 1,\n",
-    "        1, 1, 1,\n",
-    "        1, 0, 1,\n",
-    "    ],\n",
-    "    [\n",
-    "        0, 1, 0,\n",
-    "        1, 1, 1,\n",
-    "        1, 0, 1\n",
-    "    ]\n",
+    "    [1, 0, 1,\n",
+    "     1, 1, 1,\n",
+    "     1, 0, 1],  # H\n",
+    "\n",
+    "    [0, 1, 0,\n",
+    "     1, 1, 1,\n",
+    "     1, 0, 1]   # n\n",
     "]\n",
     "\n",
-    "# Labels: H=1, n=0\n",
+    "# Labels: H = 1, n = 0\n",
     "y = [1, 0]\n",
     "\n",
-    "# Initialise weights and bias to 0\n",
+    "# Initialize weights and bias to 0\n",
     "weights = [0.0] * 9\n",
     "bias = 0.0\n",
-    "lr = 0.2 # learning rate\n",
+    "lr = 0.1  # Learning rate\n",
     "\n",
-    "# Step function\n",
+    "# Activation function: simple step function\n",
     "def activate(z):\n",
     "    return 1 if z > 0 else 0\n",
     "\n",
-    "# Training loops for 5 epochs\n",
+    "# Training loop for 5 epochs\n",
     "for epoch in range(5):\n",
-    "    print(f\"\\nEpoch {epoch + 1}\")\n",
-    "\n",
+    "    print(f\"\\n🔁 Epoch {epoch + 1}\")\n",
+    "    \n",
     "    # Loop through each training example\n",
     "    for i, x in enumerate(X):\n",
-    "        print(f\"\\nExample {i + 1} - {'H' if y[i] == 1 else 'n'}\")\n",
+    "        print(f\"\\nExample {i + 1} — {'H' if y[i] == 1 else 'n'}\")\n",
     "        print(f\"Input: {x}\")\n",
     "        print(f\"Current Weights: {weights}\")\n",
     "        print(f\"Bias: {bias}\")\n",
     "\n",
-    "        # 1. Compute the weighted sum\n",
-    "        z = sum(w *xi for w, xi in zip(weights, x)) + bias\n",
+    "        # 1. Compute the weighted sum (dot product of weights and inputs + bias)\n",
+    "        z = sum(w * xi for w, xi in zip(weights, x)) + bias\n",
     "        print(f\"Weighted sum (z): {z:.2f}\")\n",
     "\n",
     "        # 2. Apply activation function to get binary prediction\n",
     "        pred = activate(z)\n",
     "        print(f\"Prediction: {pred} | True: {y[i]}\")\n",
     "\n",
-    "        # 3. Calculate Error\n",
+    "        # 3. Calculate error\n",
     "        error = y[i] - pred\n",
     "        print(f\"Error: {error}\")\n",
     "\n",
-    "        # 4. Update the weights and bias using the perceptron rule\n",
+    "        # 4. Update weights and bias using the perceptron learning rule\n",
     "        weights = [w + lr * error * xi for w, xi in zip(weights, x)]\n",
     "        bias += lr * error\n",
     "\n",
